src/main/java/com/example/newspeed/global/error/CommentNotFoundException.java
package com.example.newspeed.global.error;

public class CommentNotFoundException extends RuntimeException {
    public CommentNotFoundException(String message) {
        super(message);
    }
}
